research/masked_event_model/v1/README.md
# Masked Event Model v1

Two-stream masked event autoencoder for quote/trade chunk data generated by the v22 event preprocessor.

## Data

Default inputs:

```text
D:/market-data/flatfiles/us_stocks_sip/derived/event_chunks_v2
D:/market-data/flatfiles/us_stocks_sip/derived/canonical_events_v2
```

The trainer reads phase-3 chunk parquet files:

```text
event_chunks_v2/ticker=<ticker>/<yyyy-mm>.parquet
```

## Model

Default model:

```text
d_model = 512
heads = 8
quote_event_layers = 2
trade_event_layers = 2
temporal_layers = 8
decoder_layers = 4
mask_ratio ~= 70%
```

The reconstruction loss is backpropagated only on masked parts. Continuous quote/trade/summary fields use masked MSE. Event-kind reconstruction uses masked cross entropy. Each component is averaged independently before the weighted total is formed.

## Workstation Run

```powershell
cd D:\TradingCodes\quant-research-workbench-masked-event-v1-runtime
.\run_train.ps1
```
