research/masked_event_model/v2/README.md
# Masked Event Model v2

Two-stream masked event autoencoder for quote/trade chunk data generated by the v22 event preprocessor.

## Data

Default inputs:

```text
D:/market-data/flatfiles/us_stocks_sip/derived/event_chunks_v2
D:/market-data/flatfiles/us_stocks_sip/derived/canonical_events_v2
```

The trainer reads phase-3 chunk parquet files:

```text
event_chunks_v2/ticker=<ticker>/<yyyy-mm>.parquet
```

## Model

Default model:

```text
d_model = 256
heads = 4
quote_event_layers = 2
trade_event_layers = 2
temporal_layers = 8
decoder_layers = 4
mask_ratio ~= 70%
encoder_visible_ratio = 30%
```

The reconstruction loss is backpropagated only on masked parts. Continuous quote/trade/summary fields use masked MSE. Event-kind reconstruction uses masked cross entropy. Each component is averaged independently before the weighted total is formed.

The training forward path uses sparse masked reconstruction: decoder heads run only for masked quote/trade/summary/event-kind targets. Masked event tokens are dropped from the quote/trade event encoders, capped by `encoder_visible_ratio`, while the production `encode()` path remains unmasked and uses all events.

Linear probing is intentionally separate from pretraining. Run it after a checkpoint exists; it loads the frozen encoder from `checkpoints/checkpoint_latest.pt`, trains only a linear probe head, writes metrics under the linear-probe run folder, and logs `probe/...` metrics to W&B.

## Workstation Run

Default workstation layout:

```text
D:\TradingML\codes\masked_event_model\v2
D:\TradingML\runtimes\masked_event_model\v2
```

Keep secrets in `D:\TradingML\.env` or `D:\TradingML\secrets\.env`, not inside copied code or run directories.

```powershell
cd D:\TradingML\codes\masked_event_model\v2
python research\masked_event_model\v2\run_train.py
python research\masked_event_model\v2\run_linear_probe.py
```
